DOL module vs. technical debt and generics
- I tried to narrow generics in this packages, which made visible some weird
  constructions, maybe from some unfinished former refactoring.
- sometimes I inverted some conditions to make them more readable too, etc.

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>